# ocds-merge-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pypi.yml  release.yml
docs/: changelog.md  conf.py  index.md
docs/api/: index.rst
python/ocdsmerge_rs/: exceptions.py
src/: lib.rs  main.rs
tests/: conftest.py  test_collisions.py  test_merge.py
