[package]
name = "ocds-merge-rs"
version = "0.1.0"
authors = ["Open Contracting Partnership <data@open-contracting.org>"]
edition = "2021"
description = "Merges JSON texts conforming to the Open Contracting Data Standard."
homepage = "http://github.com/open-contracting/ocds-merge-rs"
repository = "http://github.com/open-contracting/ocds-merge-rs"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["cli", "json"]

[dependencies]
derivative = "2.2"
fastrand = "1.9"
human-panic = "1.0"
indexmap = "1.9"
log = "0.4"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1.0"
